--- a/assets/_ticker.scss
+++ b/assets/_ticker.scss
@@ -1,3 +1,15 @@
+.marquee {
+  position: relative;
+  z-index: -5;
+  margin-top: 44px;
+
+  overflow: hidden;
+
+  img {
+    display: flex;
+  }
+}
+
 .ticker {
   margin-top: 45px;
 
@@ -7,7 +19,7 @@
     background: repeat-x url('../pictures/rollText.svg') center / contain;
     background-size: 1452px 96px;
     background-position: 0px 0px;
-    animation: marquee 8s linear infinite reverse;
+    // animation: marquee 8s linear infinite reverse;
   }
 }
 
@@ -22,22 +34,21 @@
   }
 }
 
-@keyframes marquee {
-  0% {
-    background-position: 0px 0px;
-  }
-  100% {
-    background-position: 1452px 0;
-  }
-}
+// @keyframes marquee {
+//   0% {
+//     background-position: 0px 0px;
+//   }
+//   100% {
+//     background-position: 1452px 0;
+//   }
+// }
 
 @media screen and (max-width: 550px) {
-  .ticker {
+  .marquee {
     margin-top: 25px;
 
-    &__text {
+    img {
       height: 70px;
-      background-size: 884px 65px;
     }
   }
 
