change media query modal window

--- a/assets/_contacts.scss
+++ b/assets/_contacts.scss
@@ -409,6 +409,10 @@
       line-height: 28px;
     }
 
+    &__custumer-form {
+      width: 100%;
+    }
+
     &__custumers {
       margin-top: 21px;
     }
