--- a/assets/_offer.scss
+++ b/assets/_offer.scss
@@ -106,21 +106,29 @@
       }
     }
 
+    &__card {
+      max-width: 600px;
+    }
+
     &__egg {
       &-left {
+        width: 55%;
         left: -25%;
       }
       &-right {
+        width: 35%;
         left: unset;
         right: -10%;
       }
       &-bottom {
+        width: 25%;
         left: unset;
         right: -15%;
       }
     }
   }
 }
+
 
 @media screen and (max-width: 1040px) {
   .offer {
