--- a/assets/_elastic-slider.scss
+++ b/assets/_elastic-slider.scss
@@ -10,6 +10,11 @@
     top: 0;
   }
 
+  .white.active {
+    clip-path: unset;
+    position: static;
+  }
+  
   .top {
     z-index: 2;
     position: absolute;
