--- a/assets/_offer.scss
+++ b/assets/_offer.scss
@@ -1,5 +1,4 @@
 .offer {
-
   // margin-top: 155px;
 
   &__wrapper {
@@ -43,6 +42,13 @@
       width: 100%;
       height: 100%;
       z-index: -1;
+    }
+
+    &:active {
+      transform: translate(5px, 10px);
+      &:before {
+        content: none;
+      }
     }
 
     &:hover {
@@ -129,7 +135,6 @@
   }
 }
 
-
 @media screen and (max-width: 1040px) {
   .offer {
     &__egg {
@@ -213,7 +218,7 @@
       &-bottom {
         top: -15%;
         left: unset;
-        right: 5%;;
+        right: 5%;
       }
     }
   }
