--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -152,6 +152,14 @@
   z-index: -1;
 }
 
+.offer__buy-btn:active {
+  transform: translate(5px, 10px);
+}
+
+.offer__buy-btn:active:before {
+  content: none;
+}
+
 .offer__buy-btn:hover {
   cursor: pointer;
 }
@@ -1634,6 +1642,11 @@
   top: 0;
 }
 
+.elastic .white.active {
+  clip-path: unset;
+  position: static;
+}
+
 .elastic .top {
   z-index: 2;
   position: absolute;
@@ -1654,22 +1667,19 @@
 }
 
 .modal-buy {
-  position: absolute;
-  z-index: 100;
-  top: 0;
-  left: 50%;
-  transform: translate(-50%, -100%);
-  transition: transform 0.4s ease;
-  overflow: hidden;
-  display: none;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  background-color: #ffffff;
+  position: fixed;
+  overflow: hidden;
+  background-color: #fff;
+  left: 0;
+  top: 0;
+  z-index: 5;
+  display: none;
 }
 
 .modal-buy.active {
   display: block;
-  transform: translate(-50%, 0);
 }
 
 .modal-buy__wrapper {
