--- a/assets/_contacts.scss
+++ b/assets/_contacts.scss
@@ -337,7 +337,7 @@
 
 @media screen and (max-width: 768px) {
   .contacts {
-    min-height: 1200px;
+    // min-height: 1200px;
 
     &__wrapper {
       flex-direction: column;
