working on sidebar

--- a/assets/_elastic-slider.scss
+++ b/assets/_elastic-slider.scss
@@ -14,6 +14,11 @@
     clip-path: unset;
     position: static;
   }
+
+  .darken.active {
+    clip-path: unset;
+    position: static;
+  }
   
   .top {
     z-index: 2;
