--- a/assets/_offer.scss
+++ b/assets/_offer.scss
@@ -1,326 +1,3 @@
-// .offer {
-//   &__wrapper {
-//     position: relative;
-//     display: flex;
-//     display: -webkit-flex;
-//     flex-direction: column;
-//     -ms-flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-
-//     z-index: 1; //
-//   }
-
-//   &__card {
-//     margin-top: 13px;
-//     z-index: 0;
-//   }
-
-//   &__buy-btn {
-//     margin-top: 52px;
-//     color: $color-text;
-//     font-size: 18px;
-//     font-weight: 600;
-//     line-height: 21px;
-
-//     background-color: $color-main;
-//     border: 2px solid #000000;
-//     border-radius: 40px;
-
-//     padding: 22px 48px 22px 49px;
-
-//     position: relative;
-
-//     &:before {
-//       content: ' ';
-//       position: absolute;
-//       bottom: -10px;
-//       left: 5px;
-//       border: 2px solid #000000;
-//       border-width: 0px 2px 2px 0px;
-//       border-radius: 40px;
-//       width: 100%;
-//       height: 100%;
-//       z-index: -1;
-//     }
-
-//     &:active {
-//       transform: translate(5px, 10px);
-//       &:before {
-//         content: none;
-//       }
-//     }
-
-//     &:hover {
-//       cursor: pointer;
-//     }
-//   }
-
-//   &__egg, &__bag {
-//     position: absolute;
-//     &-bottom {
-//       top: -20%;
-//       left: 70%;
-//       z-index: -1;
-//     }
-//     &-right {
-//       z-index: 1;
-//       top: 50%;
-//       left: 65%;
-//       filter: blur(12px);
-//     }
-//     &-left {
-//       z-index: 1;
-//       top: 30%;
-//       left: 7%;
-//       filter: blur(18px);
-//     }
-//   }
-
-//   //  {
-//   //   &-left {
-//   //     width: 35%;
-//   //   }
-//   //   &-right {
-//   //     width: 30%;
-//   //   }
-//   //   &-bottom {
-//   //     width: 20%;
-//   //   }
-//   // }
-// }
-
-// .darken {
-//   .offer {
-//     &__buy-btn {
-//       background-color: $color-white;
-
-//       &:before {
-//         background-color: $color-main;
-//         z-index: -1;
-//       }
-//     }
-//   }
-// }
-
-// @media screen and (max-width: 1200px) {
-//   .offer {
-//     &__wrapper {
-//       > picture {
-//         position: relative;
-//       }
-//     }
-
-//     &__card {
-//       max-width: 600px;
-//     }
-
-//     &__egg {
-//       &-left {
-//         width: 55%;
-//         left: -25%;
-//       }
-//       &-right {
-//         width: 35%;
-//         left: unset;
-//         right: -10%;
-//       }
-//       &-bottom {
-//         width: 25%;
-//         left: unset;
-//         right: -15%;
-//       }
-//     }
-//   }
-// }
-
-// @media screen and (max-width: 1040px) {
-//   .offer {
-//     &__egg {
-//       &-left {
-//         width: 40%;
-//         top: unset;
-//         bottom: -15%;
-//         left: -15%;
-//       }
-//       &-right {
-//         width: 30%;
-//         left: unset;
-//         right: -10%;
-//       }
-//       &-bottom {
-//         width: 25%;
-//         left: unset;
-//         right: -15%;
-//       }
-//     }
-//   }
-// }
-
-// @media screen and (max-width: 975px) {
-//   .offer {
-//     &__wrapper {
-//       > picture {
-//         display: flex;
-//         justify-content: center;
-//       }
-//     }
-
-//     &__egg {
-//       &-left {
-//         width: 35%;
-//         top: unset;
-//         bottom: -15%;
-//         left: -4%;
-//       }
-//       &-right {
-//         width: 25%;
-//         left: unset;
-//         top: unset;
-//         bottom: -10%;
-//         right: 0;
-//       }
-//       &-bottom {
-//         width: 20%;
-//         left: unset;
-//         right: 2%;
-//       }
-//     }
-
-//     &__card {
-//       width: 75%;
-//     }
-//   }
-// }
-
-// @media screen and (max-width: 768px) {
-//   .offer {
-//     &__card {
-//       max-width: 612px;
-//     }
-//     &__egg {
-//       &-left {
-//         top: unset;
-//         bottom: -20%;
-//         left: -4%;
-//         filter: blur(5px);
-//       }
-
-//       &-right {
-//         top: unset;
-//         left: unset;
-//         right: 5%;
-//         bottom: -20%;
-//         filter: blur(4px);
-//       }
-
-//       &-bottom {
-//         top: -15%;
-//         left: unset;
-//         right: 5%;
-//       }
-//     }
-//   }
-// }
-
-// @media screen and (max-width: 550px) {
-//   .offer {
-//     &__card {
-//       width: 250px;
-//     }
-
-//     &__buy-btn {
-//       margin-top: 60px;
-//       font-weight: 500;
-//       width: 224px;
-//       padding: 19px 33px;
-//     }
-
-//     &__egg {
-//       &-left {
-//         width: 100px;
-//         filter: blur(5px);
-//         top: unset;
-//         right: unset;
-//         left: -20%;
-//       }
-
-//       &-bottom {
-//         width: 51px;
-//         left: unset;
-//         right: -7%;
-//       }
-
-//       &-right {
-//         width: 75px;
-//         left: unset;
-//         top: unset;
-//         right: -7%;
-//         filter: blur(5px);
-//       }
-//     }
-//   }
-// }
-
-// .offer {
-//   &__wrapper {
-//     display: -webkit-flex;
-//     display: -ms-flexbox;
-//     display: flex;
-//     flex-direction: column;
-//     -ms-flex-direction: column;
-//     align-items: center;
-
-//     padding-top: 15px;
-//   }
-
-//   &__img-wrapper {
-//     display: -webkit-flex;
-//     display: -ms-flexbox;
-//     display: flex;
-
-//     position: relative;
-
-//     max-width: 690px;
-//   }
-
-//   &__card {
-//     width: 100%;
-//     height: 100%;
-//   }
-
-//   &__eggs {
-//     position: absolute;
-//     z-index: 1;
-//   }
-
-//   &__egg {
-//     &-left {
-//       max-width: 277px;
-//       width: 100%;
-//       bottom: -16%;
-//       left: -25%;
-//     }
-
-//     &-right {
-//       max-width: 231px;
-//       width: 100%;
-//       bottom: -20%;
-//       right: -20%;
-//     }
-
-//     &-bottom {
-//       max-width: 175px;
-//       width: 100%;
-
-//       top: -16%;
-//       right: -12%;
-
-//       z-index: -1;
-//     }
-//   }
-// }
-
 .offer {
   padding-top: 15px;
 
@@ -378,7 +55,6 @@
   }
 
   &__buy-btn {
-    
     color: $color-text;
     font-size: 18px;
     font-weight: 600;
@@ -403,6 +79,8 @@
       width: 100%;
       height: 100%;
       z-index: -1;
+
+      background-color: #fff;
     }
 
     &:active {
