--- a/assets/_privilege.scss
+++ b/assets/_privilege.scss
@@ -101,61 +101,74 @@
         justify-content: flex-end;
       }
 
-      > picture {
-        position: relative;
-      }
+      // .fire {
+      //   left: 8%;
+      //   bottom: 40%;
+      //   z-index: 1;
+      //   animation: infinite 5s ease fire;
+      // }
 
-      .card-terminal,
-      .terminal-shadow,
-      .one-money,
-      .two-money,
-      .fire,
-      .fire-shadow {
+      // .fire-shadow {
+      //   left: 14%;
+      //   bottom: 40%;
+      //   z-index: 0;
+      //   animation: infinite 5s ease fireShadow;
+      //   transform-origin: center;
+      //   transform-box: fill-box;
+      // }
+    }
+
+
+    &__img {
+      display: flex;
+      position: relative;
+      width: 100%;
+      
+
+      img:not(:first-child) {
         position: absolute;
       }
 
       .card-terminal {
-        bottom: 24%;
-        right: 6%;
+        width: 50%;
+        right: 5%;
+        bottom: 20%;
         z-index: 1;
-
         animation: infinite 4s ease terminal;
       }
 
       .terminal-shadow {
-        bottom: 14%;
-        right: 5%;
+        width: 40%;
+        bottom: 17%;
+        right: 10%;
         z-index: 0;
         animation: infinite 4s 0.2s ease shadow;
       }
 
       .one-money {
-        left: 34%;
+        width: 9%;
         top: 44%;
+        left: 17%;
+
         animation: infinite 3s 1s ease oneMoney;
       }
 
       .two-money {
-        left: 25%;
-        bottom: 12.4%;
+        width: 9%;
+        bottom: 10%;
+        left: 6%;
+
         animation: infinite 3s 2s ease oneMoney;
       }
-
-      .fire {
-        left: 8%;
-        bottom: 40%;
-        z-index: 1;
-        animation: infinite 5s ease fire;
-      }
-
-      .fire-shadow {
-        left: 14%;
-        bottom: 40%;
-        z-index: 0;
-        animation: infinite 5s ease fireShadow;
-        transform-origin: center;
-        transform-box: fill-box;
-      }
+      
+      // .card-terminal,
+      // .terminal-shadow,
+      // ,
+      // .two-money,
+      // .fire,
+      // .fire-shadow {
+      //   position: absolute;
+      // }
     }
 
     &__text {
@@ -164,6 +177,11 @@
       flex-direction: column;
       align-items: flex-start;
       justify-content: center;
+      margin-right: 100px;
+      &:nth-child(2) {
+        margin-right: 0;
+        margin-left: 100px;
+      }
     }
 
     &__description {
@@ -180,12 +198,8 @@
     }
 
     &__picture {
-      width: 410px;
-      margin-left: 100px;
-
-      &:nth-child(1) {
-        margin-right: 100px;
-      }
+      position: relative;
+      width: 100%;
     }
   }
 }
@@ -396,7 +410,7 @@
       }
 
       &__text {
-        margin-top: 40px;
+        margin: 40px 0 0 0;
         max-width: 231px;
         border-bottom: 1px solid black;
       }
@@ -416,8 +430,12 @@
         }
       }
 
+      &__img {
+        width: 60%;
+      }
+
       &__picture {
-        width: 230px;
+        width: 100%;
       }
     }
 
@@ -445,7 +463,7 @@
     transform: translate(0, 0);
   }
   50% {
-    transform: translate(0, -50px);
+    transform: translate(0, -15%);
   }
   100% {
     transform: translate(0, 0);
@@ -454,13 +472,13 @@
 
 @keyframes shadow {
   0% {
-    transform: scale(1);
-  }
-  50% {
     transform: scale(1.25);
   }
-  100% {
+  50% {
     transform: scale(1);
+  }
+  100% {
+    transform: scale(1.25);
   }
 }
 
@@ -469,7 +487,7 @@
     transform: translate(0, 0);
   }
   50% {
-    transform: translate(0, -30px);
+    transform: translate(0, -50%);
   }
   100% {
     transform: translate(0, 0);
