--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1731,21 +1731,37 @@ h2 {
 }
 
 .stroke-none {
-  text-shadow: none;
+  -webkit-text-stroke: unset;
 }
 
 .stroke-2 {
-  text-shadow: #333333 1.75px 0px 0px, #333333 1.47198px 0.94646px 0px, #333333 0.72624px 1.59219px 0px, #333333 -0.25025px 1.73202px 0px, #333333 -1.14722px 1.32151px 0px, #333333 -1.67968px 0.4911px 0px, #333333 -1.67843px -0.49535px 0px, #333333 -1.14388px -1.3244px 0px, #333333 -0.24587px -1.73264px 0px, #333333 0.73027px -1.59035px 0px, #333333 1.47436px -0.94273px 0px;
+  -webkit-text-stroke: 2px #333;
 }
 
 .stroke-3 {
-  text-shadow: #333333 2.55px 0px 0px, #333333 2.35642px 0.97457px 0px, #333333 1.80508px 1.80117px 0px, #333333 0.97967px 2.3543px 0px, #333333 0.00553px 2.54999px 0px, #333333 -0.96945px 2.35853px 0px, #333333 -1.79725px 1.80898px 0px, #333333 -2.35217px 0.98478px 0px, #333333 -2.54998px 0.01106px 0px, #333333 -2.36063px -0.96433px 0px, #333333 -1.81287px -1.79332px 0px, #333333 -0.98988px -2.35003px 0px, #333333 -0.01659px -2.54995px 0px, #333333 0.95921px -2.36271px 0px, #333333 1.78938px -1.81676px 0px, #333333 2.34788px -0.99497px 0px, #333333 2.5499px -0.02212px 0px;
+  -webkit-text-stroke: 3px #333;
 }
 
 .stroke-2-white {
-  text-shadow: #fefefe 1.75px 0px 0px, #fefefe 1.47198px 0.94646px 0px, #fefefe 0.72624px 1.59219px 0px, #fefefe -0.25025px 1.73202px 0px, #fefefe -1.14722px 1.32151px 0px, #fefefe -1.67968px 0.4911px 0px, #fefefe -1.67843px -0.49535px 0px, #fefefe -1.14388px -1.3244px 0px, #fefefe -0.24587px -1.73264px 0px, #fefefe 0.73027px -1.59035px 0px, #fefefe 1.47436px -0.94273px 0px;
+  -webkit-text-stroke: 2px #fff;
 }
 
 .stroke-3-white {
-  text-shadow: #fefefe 2.55px 0px 0px, #fefefe 2.35642px 0.97457px 0px, #fefefe 1.80508px 1.80117px 0px, #fefefe 0.97967px 2.3543px 0px, #fefefe 0.00553px 2.54999px 0px, #fefefe -0.96945px 2.35853px 0px, #fefefe -1.79725px 1.80898px 0px, #fefefe -2.35217px 0.98478px 0px, #fefefe -2.54998px 0.01106px 0px, #fefefe -2.36063px -0.96433px 0px, #fefefe -1.81287px -1.79332px 0px, #fefefe -0.98988px -2.35003px 0px, #fefefe -0.01659px -2.54995px 0px, #fefefe 0.95921px -2.36271px 0px, #fefefe 1.78938px -1.81676px 0px, #fefefe 2.34788px -0.99497px 0px, #fefefe 2.5499px -0.02212px 0px;
+  -webkit-text-stroke: 3px #fff;
+}
+
+.stroke-1 {
+  -webkit-text-stroke: 1px #333;
+}
+
+.stroke-1 {
+  -webkit-text-stroke: 1px #333;
+}
+
+.stroke-1-white {
+  -webkit-text-stroke: 1px #fff;
+}
+
+.stroke-1-white {
+  -webkit-text-stroke: 1px #fff;
 }
