--- a/assets/main.scss
+++ b/assets/main.scss
@@ -67,47 +67,37 @@ h2 {
 }
 
 .stroke-none {
-  text-shadow: none;
+  -webkit-text-stroke: unset;
 }
 
 .stroke-2 {
-  text-shadow: $color-text 1.75px 0px 0px, $color-text 1.47198px 0.94646px 0px,
-    $color-text 0.726244px 1.59219px 0px, $color-text -0.250246px 1.73202px 0px,
-    $color-text -1.14722px 1.32151px 0px, $color-text -1.67968px 0.491101px 0px,
-    $color-text -1.67843px -0.495348px 0px, $color-text -1.14388px -1.3244px 0px,
-    $color-text -0.245865px -1.73264px 0px, $color-text 0.730269px -1.59035px 0px,
-    $color-text 1.47436px -0.942734px 0px;
+  -webkit-text-stroke: 2px #333;
 }
 
 .stroke-3 {
-  text-shadow: $color-text 2.55px 0px 0px, $color-text 2.35642px 0.974565px 0px,
-    $color-text 1.80508px 1.80117px 0px, $color-text 0.979674px 2.3543px 0px,
-    $color-text 0.00553063px 2.54999px 0px, $color-text -0.969452px 2.35853px 0px,
-    $color-text -1.79725px 1.80898px 0px, $color-text -2.35217px 0.984778px 0px,
-    $color-text -2.54998px 0.0110612px 0px, $color-text -2.36063px -0.964334px 0px,
-    $color-text -1.81287px -1.79332px 0px, $color-text -0.989877px -2.35003px 0px,
-    $color-text -0.0165918px -2.54995px 0px, $color-text 0.959212px -2.36271px 0px,
-    $color-text 1.78938px -1.81676px 0px, $color-text 2.34788px -0.994971px 0px,
-    $color-text 2.5499px -0.0221223px 0px;
+  -webkit-text-stroke: 3px #333;
 }
 
 .stroke-2-white {
-  text-shadow: $color-white 1.75px 0px 0px, $color-white 1.47198px 0.94646px 0px,
-    $color-white 0.726244px 1.59219px 0px, $color-white -0.250246px 1.73202px 0px,
-    $color-white -1.14722px 1.32151px 0px, $color-white -1.67968px 0.491101px 0px,
-    $color-white -1.67843px -0.495348px 0px, $color-white -1.14388px -1.3244px 0px,
-    $color-white -0.245865px -1.73264px 0px, $color-white 0.730269px -1.59035px 0px,
-    $color-white 1.47436px -0.942734px 0px;
+  -webkit-text-stroke: 2px #fff;
 }
 
 .stroke-3-white {
-  text-shadow: $color-white 2.55px 0px 0px, $color-white 2.35642px 0.974565px 0px,
-    $color-white 1.80508px 1.80117px 0px, $color-white 0.979674px 2.3543px 0px,
-    $color-white 0.00553063px 2.54999px 0px, $color-white -0.969452px 2.35853px 0px,
-    $color-white -1.79725px 1.80898px 0px, $color-white -2.35217px 0.984778px 0px,
-    $color-white -2.54998px 0.0110612px 0px, $color-white -2.36063px -0.964334px 0px,
-    $color-white -1.81287px -1.79332px 0px, $color-white -0.989877px -2.35003px 0px,
-    $color-white -0.0165918px -2.54995px 0px, $color-white 0.959212px -2.36271px 0px,
-    $color-white 1.78938px -1.81676px 0px, $color-white 2.34788px -0.994971px 0px,
-    $color-white 2.5499px -0.0221223px 0px;
+  -webkit-text-stroke: 3px #fff;
+}
+
+.stroke-1 {
+  -webkit-text-stroke: 1px #333;
+}
+
+.stroke-1 {
+  -webkit-text-stroke: 1px #333;
+}
+
+.stroke-1-white {
+  -webkit-text-stroke: 1px #fff;
+}
+
+.stroke-1-white {
+  -webkit-text-stroke: 1px #fff;
 }
