--- a/assets/_privilege.scss
+++ b/assets/_privilege.scss
@@ -100,22 +100,6 @@
       &:nth-child(2) {
         justify-content: flex-end;
       }
-
-      // .fire {
-      //   left: 8%;
-      //   bottom: 40%;
-      //   z-index: 1;
-      //   animation: infinite 5s ease fire;
-      // }
-
-      // .fire-shadow {
-      //   left: 14%;
-      //   bottom: 40%;
-      //   z-index: 0;
-      //   animation: infinite 5s ease fireShadow;
-      //   transform-origin: center;
-      //   transform-box: fill-box;
-      // }
     }
 
 
@@ -143,6 +127,8 @@
         right: 10%;
         z-index: 0;
         animation: infinite 4s 0.2s ease shadow;
+        transform-origin: center;
+        transform-box: fill-box;
       }
 
       .one-money {
@@ -160,15 +146,23 @@
 
         animation: infinite 3s 2s ease oneMoney;
       }
-      
-      // .card-terminal,
-      // .terminal-shadow,
-      // ,
-      // .two-money,
-      // .fire,
-      // .fire-shadow {
-      //   position: absolute;
-      // }
+
+      .fire {
+        width: 20%;
+        bottom: 40%;
+        left: 0;
+        z-index: 1;
+        animation: infinite 4s ease fire;
+      }
+
+      .fire-shadow {
+        width: 20%;
+        left: 5%;
+        bottom: 40%;
+        animation: infinite 4s ease fireShadow;
+        transform-origin: center;
+        transform-box: fill-box;
+      }
     }
 
     &__text {
@@ -204,54 +198,6 @@
   }
 }
 
-
-@keyframes coin {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-60px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes coin-two {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-35px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes card {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-35px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes shadow-anim {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(0.85);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
 
 .darken {
   .privilege {
@@ -410,7 +356,11 @@
       }
 
       &__text {
-        margin: 40px 0 0 0;
+        margin-top: 40px;
+        margin-right: 0;
+        &:nth-child(2) {
+          margin-left: 0;
+        }
         max-width: 231px;
         border-bottom: 1px solid black;
       }
@@ -463,7 +413,7 @@
     transform: translate(0, 0);
   }
   50% {
-    transform: translate(0, -15%);
+    transform: translate(0, -45%);
   }
   100% {
     transform: translate(0, 0);
@@ -487,7 +437,7 @@
     transform: translate(0, 0);
   }
   50% {
-    transform: translate(0, -50%);
+    transform: translate(0, -100%);
   }
   100% {
     transform: translate(0, 0);
@@ -499,7 +449,7 @@
     transform: translate(0, 0);
   }
   50% {
-    transform: translate(0, -15px);
+    transform: translate(0, -30%);
   }
   100% {
     transform: translate(0, 0);
