--- a/assets/_promo.scss
+++ b/assets/_promo.scss
@@ -14,6 +14,7 @@
     color: $color-white;
     letter-spacing: 1px;
 
+    -webkit-text-stroke: 3px #333;
     .hide {
       display: none;
     }
@@ -25,9 +26,10 @@
       span {
         z-index: -1;
         left: 0;
-        top: -1.5%;
+        top: -3.3%;
         position: absolute;
         color: $color-white;
+        -webkit-text-stroke: 2px #333;
       }
     }
   }
@@ -113,6 +115,8 @@
       font-size: 96px;
       line-height: 105px;
       padding-left: 76px;
+
+      -webkit-text-stroke: 2px #333;
       .hide {
         display: unset;
       }
@@ -155,6 +159,12 @@
       padding-left: 44px;
       font-size: 36px;
       line-height: 42px;
+
+      -webkit-text-stroke: 1px #333;
+
+      span span {
+        -webkit-text-stroke: 1px #333;
+      }
     }
 
     &__controls {
@@ -167,6 +177,7 @@
 
     &__buy-btn {
       margin: 0;
+      margin-top: 50px;
     }
   }
 }
